--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -1,28 +1,95 @@
+select option {
+    background-color: #e6e7ee;
+}
 
-  .table-menu {
+select option:hover {
+    background-color: #e6e7ee;
+    color: #44476a;
+    font-weight: bold;
+}
+
+form{
+    background: #e6e7ee;
+    overflow-y: hidden;
+    border-radius: 2rem;
+    border: 0.10rem solid #d1d9e6;
+    padding: 1.5rem;
+    min-width: 28rem;
+    max-width: 77%;
+    margin-top: 2rem;
+}
+
+.dropdown {
     position: relative;
     display: inline-block;
   }
   
-  .table-menu-content {
+  .dropdown-content {
+    min-width: 10.5rem;
     display: none;
     position: absolute;
-    left: -400px;
-    top: -41px;
+    background-color: #e6e7ee;
+    box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+    border-radius: 1rem;
+    left: 0.9rem;
+    font-weight: normal;
+    width: -webkit-fill-available;
+    list-style-type: none;
     z-index: 1;
+    padding: 0;
   }
+
+  .dropdown-content .dropdown-content-container {
+    padding: 1rem;
+  }
+
+  .dropdown-content :first-child{
+    border-radius: 1rem 1rem 0 0;
+ 
+   }
+
+   .dropdown-content :last-child{
+    border-radius: 0 0 1rem 1rem;
+ 
+   }
   
-  .table-menu-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+  .dropdown-content .dropdown-content-container:hover {
+    color: #44476a;
+    font-weight: bold;
+    background-color: #e6e7ee;
+    box-shadow: 2px 2px 5px #b8b9be;
+
+  }
+
+  .dropdown:hover .dropdown-content {
     display: block;
   }
 
-  .table-menu:hover .table-menu-content {display: block;}
-  
-  .table-menu-container:hover .menu-content {display: block}
+  .button-icon{
+    border-left: .0625rem solid #b8b9be;
+    padding-left: .55rem;
+    margin-left: .22rem;
+  }
 
+  .rename-group-container .mat-form-field .mat-form-field-appearance-standard .mat-form-field-flex{
+    display: block;
+    padding: 0;
+    margin: 0;
+}
+
+.rename-group-container ::ng-deep .mat-form-field-infix{
+    border-top: none !important; 
+}
+
+.rename-group-container ::ng-deep .mat-form-field-appearance-standard .mat-form-field-flex {
+    padding-top: 0 !important;
+}
+
+.add-group-container .mat-form-field{
+
+    width: 90%;
+
+}
     ::ng-deep .p-toolbar {
         background: #e6e7ee;
         border: none;
@@ -39,7 +106,6 @@
 
     ::ng-deep.p-datatable .p-datatable-header {
         background-color: #e6e7ee;
-
         border: none;
     }
 
@@ -49,14 +115,12 @@
         background-color: transparent;
         border: none;
         padding: 1rem 0 1rem 0;
-
     }
 
     ::ng-deep .p-datatable .p-datatable-tbody>tr>td {
         text-align: center;
         background-color: transparent;
         border: none;
-
     }
 
     ::ng-deep .p-datatable .p-datatable-tbody>tr {
@@ -64,19 +128,16 @@
         border: none;
         background-color: transparent;
         border-top: .0625rem solid #d1d9e6;
-
     }
 
     ::ng-deep.p-datatable .p-sortable-column:not(.p-highlight):hover {
         background-color: transparent;
         color: #44476A;
-
     }
 
     ::ng-deep.p-datatable .p-sortable-column.p-highlight {
         background: transparent;
         color: #44476A;
-
     }
 
     ::ng-deep.p-datatable .p-sortable-column.p-highlight:hover {
@@ -98,7 +159,6 @@
     ::ng-deep.p-datatable.p-datatable-hoverable-rows .p-datatable-tbody>tr:not(.p-highlight):hover {
         background-color: rgba(38, 40, 51, .03);
         transition: 1s;
-
     }
 
     ::ng-deep.p-datatable .p-datatable-tbody>tr:last-child>td:first-child {
