--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -203,3 +203,105 @@ input:checked+.toggle-slider-neumorphism::before {
   color: #44476a;
   font-weight: bold;
 }
+
+::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: .33rem !important;}
+
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
+
+    text-align: center;
+    border: .0625rem solid #d1d9e6;
+    background-color: #e6e7ee;
+    box-shadow: 2px 2px 5px #b8b9be;
+    font-weight: 600;
+    font-size: .88rem;
+    width: fit-content;
+
+  }
+  ::ng-deep .mat-select-value {
+    color: #44476a;
+}
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-label {
+    margin-top: -0.2rem;
+}
+  
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-underline {
+    display: none;
+}
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-wrapper {
+    padding-bottom: 0;
+}
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
+    border-radius: .55rem !important;
+    padding: .11rem !important;
+}
+
+::ng-deep .mat-form-field-appearance-fill{
+    top: 0.3rem;
+    margin-left: 1rem;
+}
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-label {
+  color: #44476a;
+}
+::ng-deep .mat-form-field-appearance-fill:hover .mat-form-field-flex {
+
+    text-align: center;
+    border: .0625rem solid #d1d9e6;
+    background-color: #e6e7ee;
+    box-shadow: 2px 2px 5px #b8b9be;
+    font-weight: 600;
+    font-size: .88rem;
+    width: fit-content;
+
+}
+
+::ng-deep .mat-select-panel:not([class*=mat-elevation-z]) {
+  background-color: #e6e7ee;
+    box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+}
+
+::ng-deep .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
+  color: #44476a;
+    background-color: #e6e7ee;
+    box-shadow: 2px 2px 5px #b8b9be;
+    font-weight: bold;
+}
+
+::ng-deep .mat-option.mat-active {
+  background-color: #e6e7ee  !important;
+  box-shadow: 2px 2px 5px #b8b9be !important; 
+  border: .0625rem solid #d1d9e6 !important;
+
+}
+
+::ng-deep .mat-option:hover:not(.mat-option-disabled), .mat-option:focus:not(.mat-option-disabled) {
+  background-color: #e6e7ee  !important;
+  box-shadow: 2px 2px 5px #b8b9be !important; 
+  border: .0625rem solid #d1d9e6 !important;
+}
+
+::ng-deep .form-row .mat-form-field-appearance-standard .mat-form-field-underline {
+  display: none;
+}
+
+::ng-deep .form-row .mat-form-field-label {
+  left: 1rem;
+  top: 1.8rem;
+}
+
+::ng-deep .filter-container .mat-form-field{
+  width: 100%;
+}
+
+::ng-deep .create-group-container .mat-form-field{
+  width: 100%;
+}
+
+::ng-deep .rename-group-container .mat-form-field{
+  width: 100%;
+  margin-top: 1rem;
+}
