--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -1,12 +1,7 @@
-select option {
-    background-color: #e6e7ee;
+.menu-table-container button{
+    margin-top: 1.3rem;
 }
 
-select option:hover {
-    background-color: #e6e7ee;
-    color: #44476a;
-    font-weight: bold;
-}
 
 form{
     background: #e6e7ee;
@@ -32,11 +27,13 @@ form{
     box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
     border-radius: 1rem;
     left: 0.9rem;
+    top: 2rem;
     font-weight: normal;
     width: -webkit-fill-available;
     list-style-type: none;
     z-index: 1;
     padding: 0;
+    cursor:pointer;
   }
 
   .dropdown-content .dropdown-content-container {
@@ -395,5 +392,117 @@ form{
         background: transparent;
     }
 
+    ::ng-deep.p-dialog .p-dialog-header {
+        border-bottom: none;
+        color: #44476a;
+        background-color: transparent;
+        padding: 1rem;
+    }
+
+    ::ng-deep.p-dialog {
+        border: .0625rem solid #d1d9e6;
+        color: #44476a;
+        background-color: #e6e7ee;
+        box-shadow: 2px 2px 5px #b8b9be;
+        border-radius: 1rem;
+        width: 16rem !important;
+        padding: .55rem;
+    }
+
+    ::ng-deep.p-dialog .p-dialog-content {
+        background-color: transparent;
+        color: #44476a;
+    }
+
+    ::ng-deep.p-dialog .p-dialog-footer {
+        background-color: transparent;
+        color: #44476a;
+        border-top: none;
+        text-align: center;
+    }
+
+    ::ng-deep.p-button {
+        padding: 0.55rem 0.55rem 0.55rem 0.55rem;
+  text-align: center;
+  border-radius: .55em;
+  border: .0625rem solid #d1d9e6;
+  color: #44476a;
+  background-color: #e6e7ee;
+  transition: all .3s ease-in-out;
+  overflow-wrap: break-word;
+  box-shadow: 2px 2px 5px #b8b9be;
+  font-weight: 600;
+  font-size: 1rem;
+  width: 46% !important;
+    }
+
+
   
-    
+    ::ng-deep.p-button:enabled:hover {
+        background-color: #e6e7ee;
+
+        box-shadow: inset 2px 2px 5px #b8b9be;
+      animation: pulse 3s infinite;
+      outline: none;
+      color: #44476a;
+      border: .0625rem solid #d1d9e6;
+    }
+
+    ::ng-deep.p-button:focus {
+        background-color: #e6e7ee;
+
+        box-shadow: inset 2px 2px 5px #b8b9be;
+      animation: pulse 3s infinite;
+      outline: none;
+      color: #44476a;
+      border: .0625rem solid #d1d9e6;
+    }
+
+    ::ng-deep.p-component-overlay {
+        background-color: #e6e7eea2;
+
+    }
+
+    ::ng-deep.p-dialog .p-dialog-header-icons {
+        box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+        border: .0625rem solid #d1d9e6;
+        border-radius: 1rem;
+        background-color: #e6e7ee;
+    }
+
+    ::ng-deep.p-dialog .p-dialog-header-icons:hover {
+        box-shadow: 2px 2px 5px #b8b9be;
+        animation: pulse 3s infinite;
+      outline: none;
+    }
+
+    ::ng-deep.p-dialog .p-dialog-header .p-dialog-header-icon:focus {
+        box-shadow: 2px 2px 5px #b8b9be;
+        animation: pulse 3s infinite;
+      outline: none;
+    }
+
+    ::ng-deep.p-dialog .p-dialog-header .p-dialog-header-icon:enabled:hover {
+        color: #44476a;
+    }
+
+    ::ng-deep.pi {
+        font-weight: bold;
+        line-height: 7px; 
+        font-size: 0.88rem;
+        color: #44476a;
+
+    }
+
+    .onValidationContainer{
+        background-color: #e6e7ee;
+        box-shadow: inset 2px 2px 5px #b8b9be;
+        overflow-y: hidden;
+        border-radius: 1rem;
+        border: 0.10rem solid #d1d9e6;
+        padding: .55rem;
+        width: 100%;
+        margin-bottom: 2rem;
+        color: #44476a;
+
+    }
