--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -50,8 +50,8 @@
 
 .iconbutton-neumorphism {
   background-color: #e6e7ee;
-  padding-top: 0.5rem;
-  text-align: center;
+  padding-top: 0.3rem;
+  padding-bottom: 0.2rem;
   margin: 0;
   width: 2.5rem;
   height: 2.5rem;
@@ -65,6 +65,22 @@
   outline: 0;
   animation: pulse 3s infinite;
   background-color: rgba(38, 40, 51, 0.03);
+}
+
+.iconbutton-neumorphism-disabled{
+  background-color: #e6e7ee;
+  padding-top: 0.3rem;
+  padding-bottom: 0.2rem;
+  margin: 0;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 2rem;
+  border: .0625rem solid #d1d9e6;
+}
+
+.iconbutton-neumorphism-disabled:hover,
+.iconbutton-neumorphism-disabled:focus {
+  outline: 0;
 }
 
 .mini-iconbutton-neumorphism{
@@ -204,7 +220,7 @@ input:checked+.toggle-slider-neumorphism::before {
   font-weight: bold;
 }
 
-::ng-deep .mat-form-field-flex > .mat-form-field-infix { padding: .33rem !important;}
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex > .mat-form-field-infix { padding: .33rem !important;}
 
 
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
@@ -247,17 +263,6 @@ input:checked+.toggle-slider-neumorphism::before {
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-label {
   color: #44476a;
 }
-::ng-deep .mat-form-field-appearance-fill:hover .mat-form-field-flex {
-
-    text-align: center;
-    border: .0625rem solid #d1d9e6;
-    background-color: #e6e7ee;
-    box-shadow: 2px 2px 5px #b8b9be;
-    font-weight: 600;
-    font-size: .88rem;
-    width: fit-content;
-
-}
 
 ::ng-deep .mat-select-panel:not([class*=mat-elevation-z]) {
   background-color: #e6e7ee;
@@ -269,6 +274,20 @@ input:checked+.toggle-slider-neumorphism::before {
     background-color: #e6e7ee;
     box-shadow: 2px 2px 5px #b8b9be;
     font-weight: bold;
+}
+
+::ng-deep.mat-select-panel {
+  border-radius: 1rem !important;
+}
+
+::ng-deep.mat-select-panel :nth-child(2){
+  border-top-left-radius: 1rem !important;
+  border-top-right-radius: 1rem !important;
+}
+
+::ng-deep.mat-select-panel :last-child{
+  border-bottom-left-radius: 1rem !important;
+  border-bottom-right-radius: 1rem !important;
 }
 
 ::ng-deep .mat-option.mat-active {
@@ -304,4 +323,16 @@ input:checked+.toggle-slider-neumorphism::before {
 ::ng-deep .rename-group-container .mat-form-field{
   width: 100%;
   margin-top: 1rem;
+}
+
+::ng-deep.mat-form-field-infix {
+  width: 100% !important;
+}
+
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-infix {
+  width: 12rem !important;
+}
+
+::ng-deep .cdk-overlay-pane {
+  transform: translateX(-6px) translateY(0px) !important;
 }
