--- a/src/app/components/phone/phone.component.html
+++ b/src/app/components/phone/phone.component.html
@@ -83,7 +83,7 @@
   </div>
   <div class="row">
     <div class="col-12 button-inline " [ngClass]="toggleStatus ? 'hide' : 'show'">
-      <button class="button-neumorphism-disabled float-right"> Next call <i
+      <button class="button-neumorphism float-right"> Next call <i
           class="bi bi-arrow-right-circle-fill i-neumorphism"></i>
       </button>
     </div>
