--- a/src/app/css/neumorphism.component.css
+++ b/src/app/css/neumorphism.component.css
@@ -4,7 +4,7 @@
   background-color: #e6e7ee;
   border: .0625rem solid #d1d9e6;
   transition: all .3s ease-in-out;
-  border-radius: .55rem;
+  border-radius: 0.99rem;
   box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
   overflow-wrap: break-word;
   -webkit-appearance: none;
@@ -21,7 +21,7 @@
   box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
 }
 
-.mini-input-neumorphism{
+.mini-input-neumorphism {
   padding: .55rem;
   color: #44476a;
   background-color: #e6e7ee;
@@ -42,7 +42,7 @@
   box-shadow: none;
 }
 
-.iconbutton-container{
+.iconbutton-container {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -50,7 +50,7 @@
 
 .iconbutton-neumorphism {
   background-color: #e6e7ee;
-  padding-top: 0.3rem;
+  padding-top: 0.5rem;
   padding-bottom: 0.2rem;
   margin: 0;
   width: 2.5rem;
@@ -67,9 +67,9 @@
   background-color: rgba(38, 40, 51, 0.03);
 }
 
-.iconbutton-neumorphism-disabled{
+.iconbutton-neumorphism-disabled {
   background-color: #e6e7ee;
-  padding-top: 0.3rem;
+  padding-top: 0.5rem;
   padding-bottom: 0.2rem;
   margin: 0;
   width: 2.5rem;
@@ -83,7 +83,12 @@
   outline: 0;
 }
 
-.mini-iconbutton-neumorphism{
+.iconbutton-container .i-neumorphism{
+  padding-left: 0.75rem;
+  padding-top: 0.5rem !important;
+}
+
+.mini-iconbutton-neumorphism {
   text-align: center;
   border-radius: .55em;
   border: .0625rem solid #d1d9e6;
@@ -107,6 +112,10 @@
   color: #31344b;
 }
 
+.i-neumorphism-disabled {
+  color: #d1d9e6;
+}
+
 .button-neumorphism {
   padding: 0.55rem 0.55rem 0.55rem 0.55rem;
   text-align: center;
@@ -128,12 +137,12 @@
   outline: none;
 }
 
-.button-neumorphism-disabled{
+.button-neumorphism-disabled {
   padding: 0.55rem 0.55rem 0.55rem 0.55rem;
   text-align: center;
   border-radius: .55em;
   border: .0625rem solid #d1d9e6;
-  color: #44476a;
+  color: #d1d9e6;
   background-color: #e6e7ee;
   transition: all .3s ease-in-out;
   overflow-wrap: break-word;
@@ -141,12 +150,8 @@
 
 .button-neumorphism-disabled:hover,
 .button-neumorphism-disabled:focus {
-  box-shadow: inset 2px 2px 5px #b8b9be;
-  background-color: rgba(38, 40, 51, 0.03);
-  animation: pulse 3s infinite;
   outline: none;
 }
-
 
 .toggle-neumorphism {
   position: relative;
@@ -209,10 +214,9 @@ input:checked+.toggle-slider-neumorphism::before {
 
 .toggle-slider-neumorphism.toggle-round-neumorphism::before {
   border-radius: 50%;
-  
 }
 
-.toggle-label{
+.toggle-label {
   vertical-align: -.1em;
   padding-left: .55rem;
   font-size: smaller;
@@ -220,44 +224,45 @@ input:checked+.toggle-slider-neumorphism::before {
   font-weight: bold;
 }
 
-::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex > .mat-form-field-infix { padding: .33rem !important;}
-
+::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex>.mat-form-field-infix {
+  padding: .33rem !important;
+}
 
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
 
-    text-align: center;
-    border: .0625rem solid #d1d9e6;
-    background-color: #e6e7ee;
-    box-shadow: 2px 2px 5px #b8b9be;
-    font-weight: 600;
-    font-size: .88rem;
-    width: fit-content;
+  text-align: center;
+  border: .0625rem solid #d1d9e6;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+  font-weight: 600;
+  font-size: .88rem;
+  width: fit-content;
+}
 
-  }
-  ::ng-deep .mat-select-value {
-    color: #44476a;
+::ng-deep .mat-select-value {
+  color: #44476a;
 }
 
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-label {
-    margin-top: -0.2rem;
+  margin-top: -0.2rem;
 }
-  
+
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-underline {
-    display: none;
+  display: none;
 }
 
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-wrapper {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
 
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
-    border-radius: .55rem !important;
-    padding: .11rem !important;
+  border-radius: .55rem !important;
+  padding: .11rem !important;
 }
 
-::ng-deep .mat-form-field-appearance-fill{
-    top: 0.3rem;
-    margin-left: 1rem;
+::ng-deep .mat-form-field-appearance-fill {
+  top: 0.3rem;
+  margin-left: 1rem;
 }
 
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-label {
@@ -266,40 +271,40 @@ input:checked+.toggle-slider-neumorphism::before {
 
 ::ng-deep .mat-select-panel:not([class*=mat-elevation-z]) {
   background-color: #e6e7ee;
-    box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
 }
 
 ::ng-deep .mat-select-panel .mat-option.mat-selected:not(.mat-option-multiple) {
   color: #44476a;
-    background-color: #e6e7ee;
-    box-shadow: 2px 2px 5px #b8b9be;
-    font-weight: bold;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+  font-weight: bold;
 }
 
 ::ng-deep.mat-select-panel {
   border-radius: 1rem !important;
 }
 
-::ng-deep.mat-select-panel :nth-child(2){
+::ng-deep.mat-select-panel :nth-child(2) {
   border-top-left-radius: 1rem !important;
   border-top-right-radius: 1rem !important;
 }
 
-::ng-deep.mat-select-panel :last-child{
+::ng-deep.mat-select-panel :last-child {
   border-bottom-left-radius: 1rem !important;
   border-bottom-right-radius: 1rem !important;
 }
 
 ::ng-deep .mat-option.mat-active {
-  background-color: #e6e7ee  !important;
-  box-shadow: 2px 2px 5px #b8b9be !important; 
+  background-color: #e6e7ee !important;
+  box-shadow: 2px 2px 5px #b8b9be !important;
   border: .0625rem solid #d1d9e6 !important;
-
 }
 
-::ng-deep .mat-option:hover:not(.mat-option-disabled), .mat-option:focus:not(.mat-option-disabled) {
-  background-color: #e6e7ee  !important;
-  box-shadow: 2px 2px 5px #b8b9be !important; 
+::ng-deep .mat-option:hover:not(.mat-option-disabled),
+.mat-option:focus:not(.mat-option-disabled) {
+  background-color: #e6e7ee !important;
+  box-shadow: 2px 2px 5px #b8b9be !important;
   border: .0625rem solid #d1d9e6 !important;
 }
 
@@ -312,15 +317,15 @@ input:checked+.toggle-slider-neumorphism::before {
   top: 1.8rem;
 }
 
-::ng-deep .filter-container .mat-form-field{
+::ng-deep .filter-container .mat-form-field {
   width: 100%;
 }
 
-::ng-deep .create-group-container .mat-form-field{
+::ng-deep .create-group-container .mat-form-field {
   width: 100%;
 }
 
-::ng-deep .rename-group-container .mat-form-field{
+::ng-deep .rename-group-container .mat-form-field {
   width: 100%;
   margin-top: 1rem;
 }
@@ -335,4 +340,288 @@ input:checked+.toggle-slider-neumorphism::before {
 
 ::ng-deep .cdk-overlay-pane {
   transform: translateX(-6px) translateY(0px) !important;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  min-width: 10.5rem;
+  display: none;
+  position: absolute;
+  background-color: #e6e7ee;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff !important;
+  border-radius: 1rem;
+  left: 0.9rem;
+  top: 2rem;
+  font-weight: normal;
+  width: -webkit-fill-available;
+  list-style-type: none;
+  z-index: 1;
+  padding: 0;
+  cursor: pointer;
+}
+
+.dropdown-content .dropdown-content-container {
+  padding: 1rem;
+}
+
+.dropdown-content :first-child {
+  border-radius: 1rem 1rem 0 0;
+}
+
+.dropdown-content :last-child {
+  border-radius: 0 0 1rem 1rem;
+}
+
+.dropdown-content .dropdown-content-container:hover {
+  color: #44476a;
+  font-weight: bold;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.button-icon {
+  border-left: .0625rem solid #b8b9be;
+  padding-left: .55rem;
+  margin-left: .22rem;
+}
+
+::ng-deep .p-toolbar {
+  background: #e6e7ee;
+  border: none;
+}
+
+::ng-deep.p-checkbox {
+  width: unset;
+  height: unset;
+}
+
+::ng-deep.p-checkbox .p-checkbox-box {
+  width: 2rem;
+  height: 2rem;
+  background-color: #e6e7ee;
+}
+
+::ng-deep.p-checkbox .p-checkbox-box .p-checkbox-icon {
+  color: #44476a;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+::ng-deep.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box {
+  transition: ease-in-out 0.2s;
+}
+
+::ng-deep.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box:hover {
+  border: 0.2rem solid #d1d9e6;
+  color: #44476a;
+  background-color: #e6e7ee;
+}
+
+::ng-deep.p-checkbox:not(.p-checkbox-disabled) .p-checkbox-box.p-highlight:hover {
+  border: .0625rem solid #d1d9e6;
+  color: #44476a;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+}
+
+::ng-deep.p-checkbox .p-checkbox-box.p-highlight {
+  background-color: rgba(0, 0, 0, 0);
+  border: .0625rem solid #d1d9e6;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+}
+
+
+::ng-deep.p-checkbox .p-checkbox-box {
+  color: #b8b9be;
+}
+
+::ng-deep.p-dropdown .p-dropdown-panel {
+  border-radius: 1rem;
+  border: none;
+}
+
+::ng-deep.p-dropdown-items-wrapper {
+  border-radius: 1rem;
+}
+
+::ng-deep.p-dropdown:not(.p-disabled).p-focus {
+  box-shadow: none;
+  border: none;
+  border-bottom: .1rem solid #44476a;
+}
+
+::ng-deep.p-dropdown:not(.p-disabled).p-focus .p-dropdown-label.p-inputtext,
+::ng-deep.p-dropdown:not(.p-disabled).p-focus .p-dropdown-trigger {
+  color: #44476a;
+}
+
+::ng-deep.p-dropdown .p-dropdown-label.p-inputtext {
+  color: #b8b9be;
+}
+
+::ng-deep.p-dropdown:hover .p-dropdown-label.p-inputtext {
+  color: #44476a;
+}
+
+::ng-deep.p-dropdown .p-dropdown-trigger {
+  color: #b8b9be;
+}
+
+::ng-deep.p-dropdown:hover .p-dropdown-trigger {
+  color: #44476a;
+}
+
+::ng-deep.p-dropdown:not(.p-disabled):hover {
+  border-color: none;
+  border-radius: 0;
+}
+
+::ng-deep.p-inputtext {
+  transition: none;
+}
+
+::ng-deep.p-dropdown {
+  background: transparent;
+  border: none;
+  border-bottom: .1rem solid #b8b9be;
+  border-radius: 0;
+}
+
+::ng-deep.p-dropdown-panel .p-dropdown-items:not(.p-dropdown-virtualscroll) {
+  background-color: #e6e7ee;
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+}
+
+::ng-deep.p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight {
+  color: #44476a;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+  font-weight: bold;
+}
+
+::ng-deep.p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled):hover {
+  color: #44476a;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+}
+
+::ng-deep.p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled) {
+  background: transparent;
+}
+
+::ng-deep.p-dialog .p-dialog-header {
+  border-bottom: none;
+  color: #44476a;
+  background-color: transparent;
+  padding: 1rem;
+}
+
+::ng-deep.p-dialog {
+  border: .0625rem solid #d1d9e6;
+  color: #44476a;
+  background-color: #e6e7ee;
+  box-shadow: 2px 2px 5px #b8b9be;
+  border-radius: 1rem;
+  width: 16rem !important;
+  padding: .55rem;
+}
+
+::ng-deep.p-dialog .p-dialog-content {
+  background-color: transparent;
+  color: #44476a;
+}
+
+::ng-deep.p-dialog .p-dialog-footer {
+  background-color: transparent;
+  color: #44476a;
+  border-top: none;
+  text-align: center;
+}
+
+::ng-deep.p-button {
+  padding: 0.55rem 0.55rem 0.55rem 0.55rem;
+  text-align: center;
+  border-radius: .55em;
+  border: .0625rem solid #d1d9e6;
+  color: #44476a;
+  background-color: #e6e7ee;
+  transition: all .3s ease-in-out;
+  overflow-wrap: break-word;
+  box-shadow: 2px 2px 5px #b8b9be;
+  font-weight: 600;
+  font-size: 1rem;
+  width: 46% !important;
+}
+
+::ng-deep.p-button:enabled:hover {
+  background-color: #e6e7ee;
+  box-shadow: inset 2px 2px 5px #b8b9be;
+  animation: pulse 3s infinite;
+  outline: none;
+  color: #44476a;
+  border: .0625rem solid #d1d9e6;
+}
+
+::ng-deep.p-button:focus {
+  background-color: #e6e7ee;
+  box-shadow: inset 2px 2px 5px #b8b9be;
+  animation: pulse 3s infinite;
+  outline: none;
+  color: #44476a;
+  border: .0625rem solid #d1d9e6;
+}
+
+::ng-deep.p-component-overlay {
+  background-color: #e6e7eea2;
+}
+
+::ng-deep.p-dialog .p-dialog-header-icons {
+  box-shadow: inset 2px 2px 5px #b8b9be, inset -3px -3px 7px #fff;
+  border: .0625rem solid #d1d9e6;
+  border-radius: 1rem;
+  background-color: #e6e7ee;
+}
+
+::ng-deep.p-dialog .p-dialog-header-icons:hover {
+  box-shadow: 2px 2px 5px #b8b9be;
+  animation: pulse 3s infinite;
+  outline: none;
+}
+
+::ng-deep.p-dialog .p-dialog-header .p-dialog-header-icon:focus {
+  box-shadow: 2px 2px 5px #b8b9be;
+  animation: pulse 3s infinite;
+  outline: none;
+}
+
+::ng-deep.p-dialog .p-dialog-header .p-dialog-header-icon:enabled:hover {
+  color: #44476a;
+}
+
+::ng-deep.pi {
+  font-weight: bold;
+  line-height: 7px;
+  font-size: 0.88rem;
+  color: #44476a;
+
+}
+
+::ng-deep.mat-form-field.mat-form-field-invalid .mat-form-field-label {
+  color: #a91e2c;
+}
+
+::ng-deep.mat-focused .mat-form-field-required-marker {
+  color: #c42131;
+}
+
+::ng-deep.mat-form-field.mat-form-field-invalid .mat-form-field-label .mat-form-field-required-marker{
+  color: #c42131 !important;
 }
